--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=crdb-transactions
 
-server.port=8082
+server.port=8765
 
 spring.datasource.url=jdbc:mysql://localhost:3306/nbc-transactions
 spring.datasource.username=root
@@ -10,4 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
+logging.file.path=/app/logs
+logging.file.name=nbc-devops-logs.log
