--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=crdb-transactions
 
 server.port=8765
 
-spring.datasource.url=jdbc:mysql://localhost:3306/nbc-transactions
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nbc-transactions
 spring.datasource.username=root
 spring.datasource.password=rootpass
 
