--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@ spring.application.name=crdb-transactions
 
 server.port=8765
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nbc-transactions
-spring.datasource.username=root
-spring.datasource.password=rootpass
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://127.0.0.1:3306/nbc-transactions}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:rootpass}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
