--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@ server.port=8766
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nbc-transactions
 spring.datasource.username=root
-spring.datasource.password=rootpass
+spring.datasource.password=DevOpsRootPass
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
